@@ -1,3 +1,8 @@
+2005-08-30  Karl Berry  <karl@gnu.org>
+
+	* makeinfo/xref.c (cm_xref): if the following wrong char is ),
+	suggest @pxref.  Suggested by Kevin Ryde, 30 Aug 2005 09:23:39 +1000.
+
 2005-08-17  Predrag Rakic  <pec@uns.ns.ac.yu>
 
 	* doc/txi-sr.tex: Serbian translation.
